--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "argon-design-system-react": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-meta-tags": "^0.7.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
@@ -35,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.14.1"
   },
   "engines": {
     "node": "12.8.1"
