--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "argon-design-system-react": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.20",
     "react-meta-tags": "^0.7.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
