--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-scripts": "^3.4.3",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@nivo/bar": "^0.62.0",
-    "argon-design-system-react": "^1.1.0",
     "date-fns": "^2.14.0",
     "react": "^16.13.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
     "react-meta-tags": "^0.7.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
     "react-vertical-timeline-component": "^3.0.0"
   },
   "scripts": {
