--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.13.1",
     "react-meta-tags": "^0.7.4",
     "react-router-dom": "^5.1.2",
-    "react-vertical-timeline-component": "^3.0.0"
+    "react-vertical-timeline-component": "^3.0.0",
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
