--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@nivo/bar": "^0.62.0",
+    "axios": "^0.20.0",
     "date-fns": "^2.14.0",
     "react": "^16.13.1",
     "react-countdown": "^2.2.1",
